# weekly_projects

./: .gitignore  README.md  environment.yml  pyproject.toml
Week_1/: README.md
src/weekly_projects/: cli.py  weekly_info.py
src/weekly_projects/data_loaders/: mnist_loader.py
src/weekly_projects/models/: ffn.py
src/weekly_projects/week1/: TASKS.md  train.py  trainer.py
tests/: test_ffn.py
